--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
+sqlalchemy = "^2.0.38"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
